2007-11-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-replyToApplicationShouldTerminate:): 
	Check wheter the application is still running to prevent cycles.
	* Source/GSNibCompatibility.m (NSCustomObject-awakeFromNib): Call
	awakeFromNib on the instantiated object.
	* Source/GSNibCompatibility.m (NSCustomView-nibInstantiate): Move
	subviews to instantiated view.
	* Source/Functions.m (NSDrawBitmap): Remove compiler warning.

2007-11-24 12:38-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Call awakeFromNib later in the nib
	unarchiving process. 

2007-11-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSNibBindingConnector.m: Completed implementation.
	* Source/NSTableView.m (-_initDefaults): New method for shared
	default settings.
	* Source/NSTableView.m (-initWithFrame:, initWithCoder:): Use this
	new method.
	* Source/NSGraphicsContext.m (-GSDrawImage::): Moved implemenation
	to back.

2007-11-22 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSGraphics.h: Make NSDrawBitmap a real function.
	* Source/Functions.m (NSDrawBitmap): Implement via
	NSBitmapImageRep and GSDrawImage::.
	* Source/NSGraphicsContext.m (-GSDrawImage::): Implement via
	NSDrawBitmap::::::. To be subclassed in  backends.
	* Source/NSBitmapImageRep.m (-draw): Use GSDrawImage:: for drawing.
	
2007-11-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m (-initWithCoder:): Correct keyed decoding of
	setSendsActionOnEndEditing. 
	* Source/tiff.m: Change mode field of chandle_t to char.
	Bugs reported by gcc 4.2
	
2007-11-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.0

2007-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFont.m (-initWithName:matrix:fix:screenFont:role:): Add
	fallback for missing standard fonts.

2007-11-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSControl.m,
	* Source/NSMenuItem.m (-initWithCoder:, -encodeWithCoder:): Better
	support for keyed encoding (Tag, separator,...).
