@@ -309,21 +309,23 @@ NSCursor *getStandardCursor(NSString *name, int style)
  */
 - (id) init
 {
-  return [self initWithImage: nil hotSpot: NSMakePoint(0,15)];
+  return [self initWithImage: nil hotSpot: NSMakePoint(0,0)];
 }
 
 /**<p>Initializes and returns a new NSCursor with a NSImage <var>newImage</var>
-   and a hot spot point with x=0 and y=15.</p>
+   and a hot spot point with x=0 and y=0 (top left corner).</p>
    <p>See Also: -initWithImage:hotSpot:</p>
  */
 - (id) initWithImage: (NSImage *)newImage
 {
   return [self initWithImage: newImage
-		     hotSpot: NSMakePoint(0,15)];
+		     hotSpot: NSZeroPoint];
 }
 
 /**<p>Initializes and returns a new NSCursor with a NSImage <var>newImage</var>
    and the hot spot to <var>hotSpot</var>.</p>
+   <p>NB. The coordinate system of an NSCursor is flipped, so a hotSpot at
+   0,0 is in the top left corner of the cursor.</p>
    <p>See Also: -initWithImage: -setImage:</p>
  */
 - (id) initWithImage: (NSImage *)newImage hotSpot: (NSPoint)hotSpot
@@ -360,7 +362,9 @@ backgroundColorHint:(NSColor *)bg
   [super dealloc];
 }
 
-/**<p>Returns the hot spot point of the NSCursor</p>
+/**<p>Returns the hot spot point of the NSCursor.  This is in the
+ * cursor's coordinate system which is a flipped on (origin at the
+ * top left of the cursor).</p>
  */
 - (NSPoint) hotSpot
 {
